<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="button_text_loading">Loading…</string>
    <string name="button_text_completed">Completed</string>
    <string name="button_text_error">Ooops!</string>
    <string name="button_text_idle">Select an option</string>
    <string name="button_text_download">Download</string>
    <string name="button_text_paste_your_url">Please, provide your URL</string>
    <string name="message_connection_error">Ooops! Device not connected!</string>
    <string name="message_download_error">Download failed!</string>

    <string name="text_success">Success</string>
    <string name="text_download_success">Downloaded</string>
    <string name="text_download_failed">Download failed</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_default_button">Check download status</string>
    <string name="notification_download_in_progress">Download in progress</string>
    <string name="notification_downloading">Downloading</string>

    <string name="labels_button_download">Download</string>
    <string name="button_loading">Loading…</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="send_message">Send message</string>

    <string name="label_glide_title">Glide</string>
    <string name="label_glide_description">Image Loading Library by Bump Tech</string>
    <string name="label_radio_glide">Glide - Image Loading Library by Bump Tech</string>

    <string name="label_load_app_title">LoadApp</string>
    <string name="label_load_app_description">Current repository by Udacity</string>
    <string name="label_radio_load_app_repository">LoadApp - Current repository by Udacity</string>

    <string name="label_retrofit_title">Retrofit</string>
    <string name="label_retrofit_description">Type-safe HTTP client for Android</string>
    <string name="label_radio_retrofit">Retrofit - Type-safe HTTP client for Android</string>

    <string name="label_video_title">Video</string>
    <string name="label_video_description">Sample Video MP4 format</string>
    <string name="label_video_retrofit">Video - MP4 format</string>

    <string name="label_custom_url_title">Custom</string>
    <string name="label_custom_url_description">Use custom url</string>
    <string name="label_custom_url">Custom - Custom file download</string>

    <string name="label_radio_video_title">Video MP4 format</string>
    <string name="message_alert_select_download_type">Please, select a file to download</string>

    <string name="url_glide_repository">https://github.com/bumptech/glide/archive/refs/heads/master.zip</string>
    <string name="url_load_app_repository">https://github.com/jesselima/LoadingApp/archive/refs/heads/master.zip</string>
    <string name="url_retrofit_repository">https://github.com/square/retrofit/archive/refs/heads/master.zip</string>
    <string name="url_sample_video">http://jesselima-tech.umbler.net/videos/relive-ride-to-ST-50km-LQ.mp4</string>
    <string name="download_status">Download status</string>
    <string name="open_downloads_folder">OPEN DOWNLOADS FOLDER</string>
    <string name="text_go_back">BACK</string>
    <string name="label_file_name">File name:</string>
    <string name="label_status">Status:</string>
    <string name="label_source">Source:</string>
    <string name="message_external_storage_permission_error">We need your external storage permission to save downloaded files.</string>
    <string name="dummy_custom_url">https://example.com/some-file.zip</string>
    <string name="message_invalid_url">Invalid url</string>
    <string name="message_invalid_custom_url">Please, Check you custom URL</string>
    <string name="message_too_long_url">The URL too long</string>
    <string name="message_too_short_url">The URL too short</string>
    <string name="message_url_without_file_extension">The URL does not seems to point to a file</string>
    <string name="loading_animation_author_link">Animation by https://lottiefiles.com/JAStudio</string>
</resources>
